# code-text-editor

./: .gitignore  README.md  THEME_CUSTOMIZATION.md  TODO-aipanel.md  TODO.md  debug-ai-panel.js  jest.config.js  jest.setup.js  neutralino.config.json  package-lock.json  package.json  test-ai-panel.js  test-language-servers.md  test-layout.html  test-lsp.py  test-outline.js  test-outline.ts  test_terminal.html  vite.config.js  vitest.config.js
.tmp/: auth_info.json  window_state.config.json
resources/: index.html  styles.css
resources/js/: command-palette.js  interpreter.js  main.js  run-local.js  settings.js
src/: ai-panel.js  ai-tools.js  chat-manager.js  codemirror-editor.js  diagnostics.js  draggable-panes.js  edit-manager.js  editor.js  file-explorer.js  file-system.js  git-panel.js  index.html  language-server-dep-manager.js  language-server-manager.js  language-servers-panel.js  lsp-client.js  main.js  modal.js  model-manager.js  outline.js  simple-lsp-client.js  snapshot-manager.js  styles.css  tab-manager.js  tauri-helpers.js  terminal.js  theme-system.js  tool-manager.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  fs.json  main-capability.json  settings.json  shell.json
src-tauri/src/: clipboard.rs  fc.rs  file_system.rs  language_server.rs  lib.rs  main.rs  main_old.rs  search.rs  terminal.rs  tree_sitter_parser.rs  utils.rs
src/test/: diagnostics.test.js  setup.js  (+1 more)
tests/: FileExplorer.integration.test.js  FolderRendering.test.js  debug-folder-rendering.js  diagnostics.test.js  file-names.test.js
(+10 files in other folders)
