[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
tree-sitter = "0.25.8"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.23.4"

[profile.release]
# Ensure tree-sitter grammars are not stripped in release builds
opt-level = 3
lto = true
codegen-units = 1
strip = false  # Don't strip symbols to help with debugging


